# QuickSnippet

./: README.md  TODO.md  index.html  package.json  quicklaunch.html  recording-frame.html  region-select.html  splashscreen.html  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  ErrorBoundary.tsx  QuickLaunchWindow.css  index.css  main.tsx  quicklaunch_main.tsx  recording-frame_main.tsx  region-select_main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apps.rs  autostart.rs  db.rs  executor.rs  icon.rs  lib.rs  main.rs  recorder.rs  uploader.rs
src/components/: KeyCapture.tsx  SyntaxHighlight.tsx
src/components/ui/: badge.tsx  button.tsx  select.tsx
src/pages/: QuickLaunch.tsx  QuickLaunchWindow.tsx  RecordingFrame.tsx  RegionSelector.tsx  ScriptEditor.tsx  ScriptList.tsx  Settings.tsx  UploadHistory.tsx
