[package]
name = "quickkit"
version = "0.1.1"
description = "QuickKit - 快捷工具箱"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
winreg = "0.10"
clipboard-win = "5.4"
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"
qiniu-sdk = { version = "0.2.4", features = ["upload", "async"] }
raw-window-handle = "0.6"
windows-sys = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

